# energy-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  archive.7z.REMOVED.git-id
contracts/: Cargo.toml
contracts/fixtures/: groth16-fixture.json
contracts/src/: lib.rs
contracts/src/fixtures/: groth16-fixture.json
lib/: Cargo.toml
lib/src/: lib.rs  util.rs
node/: Cargo.toml
node/src/: main.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: sample.json
