[package]
name = "energy-tracker-verifier"
version = "0.1.0"
edition = "2021"

default-run = "energy-tracker-verifier"

[[bin]]
name = "energy-tracker-verifier"
path = "src/bin/main.rs"

[dependencies]
alloy = { version = "1.0.13", features = ["full"] }
tokio = { version = "1", features = ["full"] }
alloy-rlp = "0.3.12"
alloy-sol-types = { workspace = true }
eyre = "0.6"
alloy-contract = "1.0.20"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
