[package]
name = "energy-tracker-verifier"
version = "0.1.0"
edition = "2021"

default-run = "energy-tracker-verifier"

[[bin]]
name = "energy-tracker-verifier"
path = "src/bin/main.rs"

[dependencies]
alloy = { version = "1.0.13", features = ["full"] }
alloy-rlp = { workspace = true }
hex = { workspace = true}
eyre = "0.6"
alloy-contract = "1.0.20"
alloy-sol-types = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
