[package]
name = "energy-tracker-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ed25519-dalek = "2.1.1"
hex = "0.4.3"
alloy-trie = "0.8.1"
alloy-rlp = "0.3.12"
alloy-consensus = "1.0.16"
