[package]
name = "energy-tracker-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
alloy-rlp = { workspace = true }
ed25519-dalek = "2.1.1"
alloy-trie = "0.8.1"
alloy-consensus = "1.0.16"
