[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde_json = "1.0.142"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = ["postgres", "r2d2", "serde_json"] }
serde = { workspace = true }
energy-tracker-lib = { path = "../lib" }
