[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
sp1-sdk = "5.0.3"
axum = "0.8.4"
tracing = "0.1.40"
diesel = { version = "2", features = ["postgres", "r2d2", "serde_json"] }
serde = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
energy-tracker-lib = { path = "../lib" }
energy-tracker-verifier = { path = "../contracts" }
dotenvy = "0.15.7"

[build-dependencies]
sp1-build = "5.0.0"
